deploy/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matreshka-frontend
  labels:
    app: matreshka-erp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matreshka-frontend
  template:
    metadata:
      labels:
        app: matreshka-frontend
    spec:
      containers:
        - name: app
          image: "matreshka-frontend:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
              cpu: "500m"
