deploy/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matreshka-backend
  labels:
    app: matreshka-erp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: matreshka-backend
