deploy/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matreshka-frontend
  labels:
    app: matreshka-erp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: matreshka-frontend
