deploy/templates/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: matreshka-frontend
  labels:
    app: matreshka-erp
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - matreshka.bmstr.ru
      secretName: matreshka-frontend-tls
  rules:
    - host: matreshka.bmstr.ru
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: matreshka-frontend
                port:
                  number: 80
            path: /
