deploy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matreshka-erp
spec:
  ingressClassName: nginx
  rules:
    - host: matreshka.bmstr.ru
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: matreshka-erp
                port:
                  number: 80
            path: /
